# IPC-VLM-RK3588

./: .gitignore  CMakeLists.txt  toolchain.cmake
docs/: Class_Diagram_CN.md  DMABUF_DRM_MIGRATION_NOTES_CN.md  Flow_And_Sequence_Diagrams_CN.md  IDEAS.md  RK3588_RTSP_MPP_RKNN_Guide_CN.md
src/app/: app_options.cc  app_options.h  main.cc  pipeline_app.cc  pipeline_app.h
src/cloud/providers/: LLMApi.cpp  LLMApi.h  config.json
src/display/: drm_display.cc  drm_display.h
src/media/: ffmpeg_demuxer.cc  ffmpeg_demuxer.h  ffmpeg_headers.h  mpp_decoder.cc  mpp_decoder.h
src/model/: model_context.h  postprocess.cc  postprocess.h  rknn_input_buffer_utils.cc  rknn_input_buffer_utils.h  yolov5_model.cc  yolov5_model.h  yolov8_model.cc  yolov8_model.h  yolov8_postprocess.cc  yolov8_postprocess.h
src/pipeline/: bounded_queue.h  pipeline_queues.h  pipeline_types.h  pipeline_utils.cc  pipeline_utils.h
src/pipeline/stages/: capture_stage.cc  capture_stage.h  decode_stage.cc  decode_stage.h  inference_stage.cc  inference_stage.h  llm_stage.cc  llm_stage.h  render_stage.cc  render_stage.h
utils/: CMakeLists.txt  audio_utils.c  audio_utils.h  common.h  file_utils.c  file_utils.h  font.h  image_drawing.c  image_drawing.h  image_utils.c  image_utils.h
